# complai-web-crawler

./: .pre-commit-config.yaml  README.md  pyproject.toml
complai_web_crawler/: run_spiders.py  scrapy.cfg
complai_web_crawler/complai_web_crawler/: item_loader.py  items.py  middlewares.py  pipelines.py  settings.py
complai_web_crawler/complai_web_crawler/spiders/: eur_lex.py  offenegesetze.py  parent_spider.py
