[tool.poetry]
name = "complai-web-crawler"
version = "0.1.0"
description = ""
authors = ["Christoph Clement <christoph.clement@tum.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.2.0"
click = "^7.1.1"
scrapy = "^2.0.1"
ipython = "^7.13.0"
pymongo = "^3.10.1"
dnspython = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
spiders = "run_spiders:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
